# courses_crud

./: .env.example  Cargo.toml  Makefile  README.md  compose.dev.yaml  diesel.toml  env.example  init.sql
migrations/2025-07-07-124904_create_users/: up.sql
src/: main.rs  models.rs  schema.rs
src/config/: db.rs
src/core/di/: container.rs
src/domains/auth/models/: mod.rs  register_models.rs  user_models.rs
src/domains/auth/repositories/: mod.rs  user_repository.rs  user_repository_imp.rs
src/infrastructure/: mod.rs
src/infrastructure/traits/: mod.rs  model_response.rs
