[package]
name = "courses_crud"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_postgres"] }

# Configuração padrão do banco (será sobrescrita por DATABASE_URL se definida)
[default.databases.postgres]
url = "${DATABASE_URL}"
