[package]
name = "courses_crud"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
tokio = { version = "1.0", features = ["full"] }

# Diesel ORM
diesel = { version = "2.1.0", features = ["postgres", "chrono", "serde_json", "r2d2", "uuid"] }
diesel_migrations = "2.1.0"
r2d2 = "0.8"

# Outras dependências úteis
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
async-trait = "0.1.88"
